--- a/css.css
+++ b/css.css
@@ -32,10 +32,12 @@ header{
   display: flex;
   justify-content: center;
   align-items: center;
-    background-color: hsla(10,10%,10%,0.6);
+  background-color: hsla(10,10%,10%,0.6);
 }
 section{
   height: 44%;
+  /* height: 100%; */
+  border: 1px solid black;
 }
 
 /* DIV HEADER  */
@@ -44,15 +46,42 @@ header ul{
   height: 53.841%;
   display: flex;
   flex-direction: row;
-  background-color: hsla(10,0%,20%,0.6);
   list-style: none;
 }
 header ul > .logo{
   width: 40%;
   height: var(--full);
-  border: 1px solid black;
+  background-image: url("logo.svg");
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 header ul > .txt{
   width: 60%;
   height: var(--full);
+}
+header ul .txt > h1{
+  width: var(--full);
+  height: 20%;
+  text-align: center;
+}
+
+@media only screen and (max-width: 700px){
+  header ul{
+    height: var(--full);
+    display: flex;
+    align-items: center;
+  }
+
+  header ul > .txt{
+    width: 100%;
+  }
+  header ul{
+    flex-direction: column;
+  }
+}
+@media only screen and (max-width: 500px){
+  header ul{
+    width: 90%;
+  }
 }
