--- a/css.css
+++ b/css.css
@@ -25,14 +25,14 @@ nav, header, footer, section{
 }
 nav{
   height: 4%;
-    background-color: hsla(10,10%,10%,0.8);
+  background-color: #00354A;
 }
 header{
   height: 52%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: hsla(10,10%,10%,0.6);
+  background-color: hsla(10,10%,10%,0.2);
 }
 section{
   height: 44%;
@@ -41,6 +41,27 @@ section{
 }
 
 /* DIV HEADER  */
+nav ul{
+  width: 30%;
+  height: var(--full);
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+nav ul li{
+  width: 25%;
+  height: var(--full);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  transition: 0.07s;
+}
+nav ul li:hover{
+  background-color: hsla(360, 100%, 100%, 0.5);
+  color: black;
+  transition: 0.2s;
+}
 header ul{
   width: 60%;
   height: 53.841%;
@@ -49,7 +70,9 @@ header ul{
   list-style: none;
 }
 header ul > .logo{
+/* border: 1px solid black; */
   width: 40%;
+  min-width: 160px;
   height: var(--full);
   background-image: url("logo.svg");
   background-size: 100% 100%;
@@ -62,17 +85,51 @@ header ul > .txt{
 }
 header ul .txt > h1{
   width: var(--full);
-  height: 20%;
+  height: 30%;
   text-align: center;
+  padding: 5% 0 0;
+/*   border: 1px solid black; */
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 780px){
+  nav{
+    width: 75%;
+    height: var(--full);
+    position: absolute;
+    box-shadow: 0 0 8px hsla(0, 0%, 0%, 0.8);
+  }
+  nav ul{
+    width: var(--full);
+    height: var(--full);
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+  }
+  nav ul li{
+    width: var(--full);
+    height: 8%;
+    display: flex;
+    justify-content: left;
+/*     align-items: center; */
+    color: white;
+    padding: 4%;
+    transition: 0.07s;
+
+/*     border: 1px solid black; */
+  }
+  header{
+    width: var(--full);
+    height: var(--full)
+  }
   header ul{
     height: var(--full);
     display: flex;
     align-items: center;
   }
-
+  header ul .txt > h1{
+    padding: 0;
+    height: 10%;
+  }
   header ul > .txt{
     width: 100%;
   }
@@ -80,7 +137,13 @@ header ul .txt > h1{
     flex-direction: column;
   }
 }
+
 @media only screen and (max-width: 500px){
+  header{
+    width: 100%;
+    height: var(--full)
+  }
+
   header ul{
     width: 90%;
   }
